fix: add missing fields
